--- a/rusty-runner-server/Cargo.toml
+++ b/rusty-runner-server/Cargo.toml
@@ -19,3 +19,13 @@ log = { version = "0.4", features = ["kv"] }
 env_logger = { version = "0.11", features = ["unstable-kv"] }
 # -- Util
 rand = "0.8"
+
+[dev-dependencies]
+anyhow = "1"
+httpc-test = "0.1"
+serde_json = "1"
+
+[profile.release]
+codegen-units = 1
+lto = true
+opt-level = 3
