--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,8 @@ serde = { version = "1", features = ["derive"] }
 [dev-dependencies]
 serde_json = "1"
 serde_urlencoded = "0.7"
+
+[profile.release]
+codegen-units = 1
+lto = "fat"
+opt-level = 3
