feat: add graceful shutdown
SIGINT (ctrl+c) and SIGTERM will be trapped and lead to a graceful shutdown of the server, finishing any running requests

--- a/rusty-runner-server/Cargo.toml
+++ b/rusty-runner-server/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 rusty-runner-api = { version = "1", path = "../" }
 # -- Async
-tokio = { version = "1", features = ["fs", "process"] }
+tokio = { version = "1", features = ["fs", "process", "signal"] }
 # -- Serde
 serde = { version = "1", features = ["derive"]}
 # -- Web
