--- a/rusty-runner-server/Cargo.toml
+++ b/rusty-runner-server/Cargo.toml
@@ -18,7 +18,8 @@ tower-http = {version = "0.5", features = ["fs", "trace"] }
 log = { version = "0.4", features = ["kv"] }
 env_logger = { version = "0.11", features = ["unstable-kv"] }
 # -- Util
-rand = "0.8"
+fastrand = "2"
+clap = { version = "4", features = ["derive"] }
 
 [dev-dependencies]
 anyhow = "1"
