--- a/rusty-runner-server/Cargo.toml
+++ b/rusty-runner-server/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "rusty-runner-server"
-version = "0.2.1"
+version = "0.2.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -8,8 +8,8 @@ edition = "2021"
 [dependencies]
 actix-web = "4"
 actix-files = "0.6"
-env_logger = "0.11"
-log = "0.4"
+env_logger = { version = "0.11", features = ["unstable-kv"] }
+log = { version = "0.4", features = ["kv"] }
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["process"] }
 rusty-runner-api = { version = "1", path = "../" }
